make queries context awareness & change put to patch
