# cmd/api/docs/swagger.json
@@ -97,7 +97,37 @@
                     }
                 }
             },
-            "put": {
+            "delete": {
+                "description": "Delete a  movie with the provided id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "movies"
+                ],
+                "summary": "delete a movie",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Ok"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "patch": {
                 "description": "Update a movie with the provided details",
                 "consumes": [
                     "application/json"
@@ -123,7 +153,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.createMovieRequest"
+                            "$ref": "#/definitions/main.updateMovieRequest"
                         }
                     }
                 ],
@@ -136,36 +166,6 @@
                     },
                     "404": {
                         "description": "not found"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            },
-            "delete": {
-                "description": "Delete a  movie with the provided id",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "movies"
-                ],
-                "summary": "delete a movie",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Ok"
-                    },
-                    "400": {
-                        "description": "Bad Request"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -228,6 +228,29 @@
                 },
                 "year": {
                     "type": "integer"
+                }
+            }
+        },
+        "main.updateMovieRequest": {
+            "type": "object",
+            "properties": {
+                "genres": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "runtime": {
+                    "type": "string",
+                    "format": "utf-8",
+                    "example": "128 mins"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "year": {
+                    "type": "integer",
+                    "minimum": 1888
                 }
             }
         }
