# cmd/api/swagger.go
@@ -17,10 +17,17 @@ type getMovieResult struct {
 	Version   int32     `json:"version"`
 }
 
-// this model is used for put & get
+// this model is used for  get
 type createMovieRequest struct {
 	Title   string       `json:"title" validate:"required" maximum:"500"`
 	Year    int32        `json:"year" validate:"required" minimum:"1888" `
 	Runtime data.Runtime `json:"runtime" validate:"required" swaggertype:"string" format:"utf-8" example:"128 mins"`
 	Genres  []string     `json:"genres" validate:"required" maximum:"5"`
+}
+
+type updateMovieRequest struct {
+	Title   *string       `json:"title" maximum:"500"`
+	Year    *int32        `json:"year" minimum:"1888"`
+	Runtime *data.Runtime `json:"runtime" swaggertype:"string" format:"utf-8" example:"128 mins"`
+	Genres  []string      `json:"genres" maximum:"5"`
 }
